--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "run-cli": "tsc ./cli/main.ts --lib 'es2017','dom' --outDir build; node ./build/main.js",
-    "run-tests": "tsc ./cli/tests.ts --lib 'es2017','dom' --outDir build; node ./build/tests.js"
+    "run-tests": "tsc ./cli/tests.ts --lib 'es2017','dom' --outDir build; node ./build/tests.js",
+    "start": "tsc ./cli/Robot.ts --target 'es6'; serve "
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "serve": "^14.2.0"
+  },
   "devDependencies": {
     "@types/node": "^18.15.11"
   }
